update paper and slides

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -106,3 +106,85 @@
   year={2009},
   publisher={Citeseer}
 }
+
+@Misc{distknow,
+author =   {},
+title =    {},
+url = {https://github.com/Intelligent-Systems-Phystech/2021-Project-84},
+year = {}
+}
+
+@Article{journals/corr/Pedregosa16,
+  title =	"Hyperparameter optimization with approximate
+		 gradient",
+  author =	"Fabian Pedregosa",
+  journal =	"CoRR",
+  year = 	"2016",
+  volume =	"abs/1602.02355",
+  bibdate =	"2018-08-13",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/corr/corr1602.html#Pedregosa16",
+  URL =  	"http://arxiv.org/abs/1602.02355",
+}
+
+@misc{bishop2006pattern,
+  title={Pattern Recognition and Machine Learning (Information Science and Statistics)},
+  author={Bishop, Christopher M},
+  year={2006},
+  publisher={Springer-Verlag}
+}
+
+
+@article{bergstra2012random,
+  title={Random search for hyper-parameter optimization.},
+  author={Bergstra, James and Bengio, Yoshua},
+  journal={Journal of machine learning research},
+  volume={13},
+  number={2},
+  year={2012}
+}
+
+@InProceedings{pkt_eccv,
+author = {Passalis, Nikolaos and Tzelepi, Maria and Tefas, Anastasios},
+title = {Heterogeneous Knowledge Distillation using Information Flow Modeling},
+booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+year = {2020}
+}
+
+@article{liu2018darts,
+  title={DARTS: Differentiable Architecture Search},
+  author={Liu, Hanxiao and Simonyan, Karen and Yang, Yiming},
+  journal={arXiv preprint arXiv:1806.09055},
+  year={2018}
+}
+
+@inproceedings{bergstra2013making,
+  title={Making a science of model search: Hyperparameter optimization in hundreds of dimensions for vision architectures},
+  author={Bergstra, James and Yamins, Daniel and Cox, David},
+  booktitle={International conference on machine learning},
+  pages={115--123},
+  year={2013},
+  organization={PMLR}
+}
+
+
+@Article{journals/corr/abs-1708-07747,
+  title =	"Fashion-MNIST: a Novel Image Dataset for Benchmarking
+		 Machine Learning Algorithms",
+  author =	"Han Xiao and Kashif Rasul and Roland Vollgraf",
+  journal =	"CoRR",
+  year = 	"2017",
+  volume =	"abs/1708.07747",
+  bibdate =	"2018-08-13",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/corr/corr1708.html#abs-1708-07747",
+  URL =  	"http://arxiv.org/abs/1708.07747",
+}
+
+@inproceedings{rasley2020deepspeed,
+  title={Deepspeed: System optimizations enable training deep learning models with over 100 billion parameters},
+  author={Rasley, Jeff and Rajbhandari, Samyam and Ruwase, Olatunji and He, Yuxiong},
+  booktitle={Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+  pages={3505--3506},
+  year={2020}
+}
