--- a/docs/math_symbols.tex
+++ b/docs/math_symbols.tex
@@ -1,6 +1,8 @@
 % notations
 % bold
 \newcommand{\bz}{\mathbf{z}}
+\newcommand{\bc}{\mathbf{c}}
+\newcommand{\bv}{\mathbf{v}}
 \newcommand{\bx}{\mathbf{x}}
 \newcommand{\by}{\mathbf{y}}
 \newcommand{\bw}{\mathbf{w}}
@@ -27,15 +29,18 @@
 \newcommand{\bZeta}{\boldsymbol{Z}}
 \newcommand{\bg}{\mathbf{g}}
 \newcommand{\bff}{\mathbf{f}}
-\newcommand{\bv}{\mathbf{v}}
+%\newcommand{\bv}{\mathbf{v}}
 % mathcal
 \newcommand{\cX}{\mathcal{X}}
 \newcommand{\cY}{\mathcal{Y}}
 \newcommand{\cW}{\mathcal{W}}
 \newcommand{\cL}{\mathcal{L}}
+\newcommand{\cN}{\mathcal{N}}
+\newcommand{\cD}{\mathcal{D}}
 % transpose
-%\newcommand{\T}{^{\mathsf{T}}}
+% \newcommand{\T}{^{\mathsf{T}}}
 %other
+\newcommand{\T}{\top}
 \newcommand{\fD}{\mathfrak{D}}
 \newcommand{\fG}{\mathfrak{G}}
 \newcommand{\fF}{\mathfrak{F}}
