--- a/docs/slides/math_symbols.tex
+++ b/docs/slides/math_symbols.tex
@@ -1,6 +1,7 @@
 % notations
 % bold
 \newcommand{\bz}{\mathbf{z}}
+\newcommand{\bc}{\mathbf{c}}
 \newcommand{\bx}{\mathbf{x}}
 \newcommand{\by}{\mathbf{y}}
 \newcommand{\bw}{\mathbf{w}}
@@ -33,6 +34,7 @@
 \newcommand{\cY}{\mathcal{Y}}
 \newcommand{\cW}{\mathcal{W}}
 \newcommand{\cL}{\mathcal{L}}
+\newcommand{\cN}{\mathcal{N}}
 % transpose
 %\newcommand{\T}{^{\mathsf{T}}}
 %other
